--- a/frontend/src/components/styles/Nav.module.css
+++ b/frontend/src/components/styles/Nav.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 2rem;
+  padding: 2px 2rem;
   background-color: var(--lightDark);
   margin: 0;
 }
@@ -26,4 +26,8 @@
   text-transform: uppercase;
   padding: 4px 10px;
   border-radius: 10px;
+}
+
+.greeting {
+  padding-right: 30px;
 }
